test(persistance layer 구성 (2)): Survey 저장 로직 테스트 refactor
[-] entity 구현
  - [-] Survey
  - [-] SurveyQuestion
  - [-] Survey
[-] repository 구현
[] Survey 생성 구현